Добавляет разметку FAQ

--- a/source/index.html
+++ b/source/index.html
@@ -547,6 +547,155 @@
       </section>
 
 
+      <section class="faq" data-test="FAQ">
+        <div class="container">
+          <h2>Вопросы и ответы</h2>
+          <ul class="faq__list" data-accordion="parent">
+            <li class="faq__item" data-accordion="element">
+              <div data-accordion="button">
+                <div class="faq__title-container">
+                  <h3>Кто организатор? Какие сроки у программы?</h3>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-plus"></use>
+                    </svg>
+                  </div>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-minus"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div data-accordion="content">
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi neque nulla, blanditiis molestiae
+                    veritatis libero nostrum quos, corrupti atque facilis nesciunt odit ducimus vel deleniti tempore
+                    fugit, fuga enim sequi.
+                    Corporis eos blanditiis deserunt optio alias, sint ab ipsam adipisci incidunt aut illo recusandae
+                    odio
+                    quibusdam quas modi quaerat doloribus facere officia cumque, numquam voluptas sit ex beatae nisi?
+                    Voluptas!</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="faq__item" data-accordion="element">
+              <div data-accordion="button">
+                <div class="faq__title-container">
+                  <h3>Что такое грант на обучение?</h3>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-plus"></use>
+                    </svg>
+                  </div>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-minus"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div data-accordion="content">
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus aliquam voluptates totam
+                    suscipit! Id, nobis nam porro aut nemo, neque vel quas dignissimos, obcaecati amet facilis quis quos
+                    illo quasi?
+                    Consequatur quis dicta praesentium. Corporis voluptas enim inventore laudantium cumque quidem
+                    molestias modi alias distinctio, nostrum harum dolore maiores rerum magni architecto. Enim
+                    aspernatur
+                    eligendi libero eius minus. Laborum, sint.
+                    Esse necessitatibus omnis modi animi quibusdam voluptates, rem pariatur nemo, optio illum veniam
+                    sequi
+                    repellat fuga, non natus quos nulla a ut impedit dolores atque? Veniam ea expedita reprehenderit ut.
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="faq__item is-active" data-accordion="element">
+              <div data-accordion="button">
+                <div class="faq__title-container">
+                  <h3>Как определяется стоимость программы?</h3>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-plus"></use>
+                    </svg>
+                  </div>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-minus"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div data-accordion="content">
+                  <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев
+                    грант «Стажировка»
+                    не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного
+                    участия.</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="faq__item" data-accordion="element">
+              <div data-accordion="button">
+                <div class="faq__title-container">
+                  <h3>Признаётся ли учёба в рамках проекта для дальнейшего обучения?</h3>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-plus"></use>
+                    </svg>
+                  </div>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-minus"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div data-accordion="content">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque earum eos nam dolore sunt, odit sed
+                    itaque commodi molestiae quasi ea est sapiente exercitationem aspernatur voluptatum deleniti magnam
+                    vitae quisquam!
+                    Animi vel ullam quo numquam omnis natus vero doloribus ad nihil! Nostrum animi vitae aliquid quaerat
+                    nisi nam, itaque ut fugit maxime? Qui omnis dolores odio dolore pariatur impedit accusamus.
+                    Cumque adipisci quam dolor consequatur alias obcaecati corporis veniam. Eaque quaerat, deleniti
+                    cupiditate, aspernatur sint maxime similique nulla suscipit id possimus nemo ipsum molestias aperiam
+                    laboriosam magni quis nam quae?</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="faq__item" data-accordion="element">
+              <div data-accordion="button">
+                <div class="faq__title-container">
+                  <h3>Как выглядит полный процесс регистрациина программу «Стажировка»?</h3>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-plus"></use>
+                    </svg>
+                  </div>
+                  <div class="faq__svg-wrapper">
+                    <svg width="20" height="20">
+                      <use href="__spritemap#sprite-minus"></use>
+                    </svg>
+                  </div>
+                </div>
+                <div data-accordion="content">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ex, fugit vero non magnam dolor
+                    itaque deleniti, eligendi pariatur alias sunt assumenda id deserunt, quisquam culpa. Laborum nihil
+                    porro praesentium.
+                    Eveniet, eligendi sit accusantium ipsa earum ex molestias impedit assumenda facere corporis aliquam,
+                    tempora perferendis aut labore tempore quae sint voluptatum non quos? Dicta dolorem error excepturi,
+                    quis quos possimus.
+                    Doloribus, reprehenderit temporibus hic dolore nulla nam vitae animi excepturi optio earum
+                    consectetur
+                    ipsum veritatis, quam repellendus fugit maiores provident quasi sequi. Reprehenderit, similique sed?
+                    Cum nemo et temporibus eius?
+                    Labore illum at totam in. Dolorem culpa quaerat possimus ea eos commodi. Quibusdam dicta numquam
+                    obcaecati ad, vel officiis tempora eveniet quo at, laborum aut voluptate pariatur nemo inventore
+                    similique?</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="contacts" data-test="contacts">
         <div class="container contacts__container">
@@ -628,15 +777,7 @@
                   Ваше сообщение
                   <textarea name="message" id="message"></textarea>
                 </label>
-                <!-- <label>
-                  Выберите город
-                  <select name="city" id="city">
-                    <option value="" disabled selected></option>
-                    <option value="moscow">Москва</option>
-                    <option value="spb">Санкт-Петербург</option>
-                    <option value="novosibirsk">Новосибирск</option>
-                  </select>
-                </label> -->
+
                 <label>
                   Выберите город
                   <div class="custom-select" data-select>
@@ -661,7 +802,6 @@
                     </ul>
                   </div>
                 </label>
-
 
                 <label>
                   <input type="checkbox" name="agree" id="agree" checked>
