Завершает блок FAQ

--- a/source/index.html
+++ b/source/index.html
@@ -548,19 +548,19 @@
 
 
       <section class="faq" data-test="FAQ">
-        <div class="container">
+        <div class="container faq__container">
           <h2>Вопросы и ответы</h2>
           <ul class="faq__list" data-accordion="parent">
             <li class="faq__item" data-accordion="element">
               <div data-accordion="button">
                 <div class="faq__title-container">
                   <h3>Кто организатор? Какие сроки у программы?</h3>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--plus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-plus"></use>
                     </svg>
                   </div>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--minus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-minus"></use>
                     </svg>
@@ -582,12 +582,12 @@
               <div data-accordion="button">
                 <div class="faq__title-container">
                   <h3>Что такое грант на обучение?</h3>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--plus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-plus"></use>
                     </svg>
                   </div>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--minus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-minus"></use>
                     </svg>
@@ -613,12 +613,12 @@
               <div data-accordion="button">
                 <div class="faq__title-container">
                   <h3>Как определяется стоимость программы?</h3>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--plus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-plus"></use>
                     </svg>
                   </div>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--minus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-minus"></use>
                     </svg>
@@ -636,13 +636,13 @@
             <li class="faq__item" data-accordion="element">
               <div data-accordion="button">
                 <div class="faq__title-container">
-                  <h3>Признаётся ли учёба в рамках проекта для дальнейшего обучения?</h3>
-                  <div class="faq__svg-wrapper">
+                  <h3>Признаётся ли учёба в рамках проекта для <br class="faq__br-mobile">дальнейшего обучения?</h3>
+                  <div class="faq__svg-wrapper faq__svg-wrapper--plus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-plus"></use>
                     </svg>
                   </div>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--minus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-minus"></use>
                     </svg>
@@ -664,13 +664,13 @@
             <li class="faq__item" data-accordion="element">
               <div data-accordion="button">
                 <div class="faq__title-container">
-                  <h3>Как выглядит полный процесс регистрациина программу «Стажировка»?</h3>
-                  <div class="faq__svg-wrapper">
+                  <h3>Как выглядит полный процесс регистрации на программу «Стажировка»?</h3>
+                  <div class="faq__svg-wrapper faq__svg-wrapper--plus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-plus"></use>
                     </svg>
                   </div>
-                  <div class="faq__svg-wrapper">
+                  <div class="faq__svg-wrapper faq__svg-wrapper--minus">
                     <svg width="20" height="20">
                       <use href="__spritemap#sprite-minus"></use>
                     </svg>
