Вносит стили reviews

--- a/source/index.html
+++ b/source/index.html
@@ -703,9 +703,9 @@
           <h2>Отзывы</h2>
         </div>
         <div class="reviews__slider-container">
-          <div class="reviews__slider">
-            <ul class="reviews__list">
-              <li class="reviews__item">
+          <div class="reviews__slider swiper" data-slider="reviews-slider">
+            <ul class="reviews__list swiper-wrapper">
+              <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
                   <div class="rewievs__item-user">
                     <picture>
@@ -713,7 +713,10 @@
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <p>Лола Алекс</p>
+                    <div class="rewiews__item-name-container">
+                      <p>Лола</p>
+                      <p>Алекс</p>
+                    </div>
                   </div>
                   <div class="reviews__item-data">
                     <div class="revievs__item-program">
@@ -735,7 +738,7 @@
                     за предоставленную мне возможность.</p>
                 </div>
               </li>
-              <li class="reviews__item">
+              <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
                   <div class="rewievs__item-user">
                     <picture>
@@ -743,7 +746,76 @@
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <p>Давид Иванов</p>
+                    <div class="rewiews__item-name-container">
+                      <p>Давид</p>
+                      <p>Иванов</p>
+                    </div>
+                  </div>
+                  <div class="reviews__item-data">
+                    <div class="revievs__item-program">
+                      <h3>Программа</h3>
+                      <p>Volunteer Chance</p>
+                    </div>
+                    <div class="reviews__item-date">
+                      <h3>Дата</h3>
+                      <p>Лето 2022</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="reviews__item-main">
+                  <h3>Благодаря опыту стажировки я узнал так много нового о себе и об окружающем мире.</h3>
+                  <p>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень
+                    рекомендовал эту волонтёрскую
+                    программу всем, кто ищет значимый и незабываемый опыт. Организация была на высшем уровне. Для меня
+                    было честью быть
+                    частью такой удивительной инициативы.</p>
+                </div>
+              </li>
+              <li class="reviews__item swiper-slide">
+                <div class="reviews__item-header">
+                  <div class="rewievs__item-user">
+                    <picture>
+                      <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
+                      <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
+                        alt="Позьзователь." />
+                    </picture>
+                    <div class="rewiews__item-name-container">
+                      <p>Лола</p>
+                      <p>Алекс</p>
+                    </div>
+                  </div>
+                  <div class="reviews__item-data">
+                    <div class="revievs__item-program">
+                      <h3>Программа</h3>
+                      <p>Masa Art Challenge</p>
+                    </div>
+                    <div class="reviews__item-date">
+                      <h3>Дата</h3>
+                      <p>Осень 2022</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="reviews__item-main">
+                  <h3>Я могу с уверенностью сказать, что это был один из самых незабываемых опытов в жизни!</h3>
+                  <p>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые впечатления.
+                    Сочетание путешествий,
+                    общения и значимой работы действительно отличает её от других программ, и я чувствую огромную
+                    благодарность
+                    за предоставленную мне возможность.</p>
+                </div>
+              </li>
+              <li class="reviews__item swiper-slide">
+                <div class="reviews__item-header">
+                  <div class="rewievs__item-user">
+                    <picture>
+                      <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
+                      <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
+                        alt="Позьзователь." />
+                    </picture>
+                    <div class="rewiews__item-name-container">
+                      <p>Давид</p>
+                      <p>Иванов</p>
+                    </div>
                   </div>
                   <div class="reviews__item-data">
                     <div class="revievs__item-program">
