Правит scrollbar в programs

--- a/source/index.html
+++ b/source/index.html
@@ -474,7 +474,8 @@
           </div>
           <div class="container programs__buttons-slider-container">
 
-            <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div>
+            <!-- <div class="swiper-pagination programs__slider-pagination" data-slider="programs-slider-pgn"></div> -->
+            <div class="swiper-scrollbar programs__slider-scrollbar" data-slider="programs-scrollbar"></div>
 
             <div class="programs__buttons-container">
               <button class="programs__slider-button swiper-button-prev" type="button"
@@ -547,6 +548,11 @@
         </div>
       </section>
 
+      <section class="news" data-test="news">
+        <div class="container news__container">
+
+        </div>
+      </section>
 
       <section class="faq" data-test="FAQ">
         <div class="container faq__container">
