Правит слайдер в hero - пагинация теперь адаптивна

--- a/source/index.html
+++ b/source/index.html
@@ -150,7 +150,10 @@
                       </a>
                     </div>
                   </div>
-                  <div class="hero__pagination-decorative-container"></div>
+                  <div class="hero__pagination-decorative-container">
+                    <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="swiper-slide hero__item">
@@ -194,7 +197,10 @@
                       </a>
                     </div>
                   </div>
-                  <div class="hero__pagination-decorative-container"></div>
+                  <div class="hero__pagination-decorative-container">
+                    <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
+                    </div>
+                  </div>
                 </div>
               </li>
               <li class="swiper-slide hero__item">
@@ -239,12 +245,15 @@
                       </a>
                     </div>
                   </div>
-                  <div class="hero__pagination-decorative-container"></div>
+                  <div class="hero__pagination-decorative-container">
+                    <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
+                    </div>
+                  </div>
                 </div>
               </li>
             </ul>
-            <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
-            </div>
+            <!-- <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
+            </div> -->
           </div>
         </section>
       </div>
