Правит слайдер в блоке reviews

--- a/source/index.html
+++ b/source/index.html
@@ -559,7 +559,7 @@
 
       <section class="news" data-test="news">
         <div class="container news__container">
-
+          ???
         </div>
       </section>
 
@@ -855,7 +855,7 @@
             </ul>
           </div>
           <div class="container reviews__buttons-slider-container">
-            <div class="swiper-pagination reviews__slider-pagination" data-slider="reviews-slider-pgn"></div>
+            <div class="swiper-scrollbar reviews__slider-scrollbar" data-slider="reviews-scrollbar"></div>
             <div class="reviews__buttons-container">
               <button class="reviews__slider-button swiper-button-prev" type="button"
                 data-slider="reviews-slider-btn-prev">
